# cv_examples_cpp

./: CMakeLists.txt  README.md  opencv.cpp
image_read_write/: camera_open.cpp  color_change.cpp  format_change.cpp  fps_value_writing.cpp  image_read.cpp  quality_change.cpp  video_opening.cpp
introduction/: source.cpp
matrix_transactions/: animation.cpp  channels.cpp  clonning.cpp  drawing_example_2.cpp  drawing_examples_1.cpp  drawing_examples_3.cpp  pixels.cpp  row_col_example_1.cpp  satir_sutun_sayisi.cpp  shaping.cpp  window_create.cpp  writing.cpp
